# CareerKraft

./: .gitattributes  .gitignore  App.css  Procfile  README.md  app.py  debug_output.html  index.html  package-lock.json  package.json  procfile  profile.txt  pyproject.toml  requirements.txt  server.py  t.py
bert_resume_final_model/: config.json  tf_model.h5
careerkraft-env/: pyvenv.cfg
careerkraft-env/Scripts/: activate  activate.bat
css/: main.css
des/: index.html
src/: App.css  App.jsx  main.jsx
static/: index.html
