[tool.poetry]
name = "careerkraft"
version = "0.1.0"
description = ""
authors = ["prnv007-rgb <pranavmallia2004@gmail.com>"]
readme = "README.md"
packages = [{include = "careerkraft"}]  # Ensure Poetry finds your package

[tool.poetry.dependencies]
python = ">=3.11, <3.13"  # Render uses 3.11, so keep compatibility
flask = "^2.2.5"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
