[tool.poetry]
name = "careerkraft"
version = "0.1.0"
description = "AI-Powered Resume Reviewer"
authors = ["prnv007-rgb <pranavmallia2004@gmail.com>"]
readme = "README.md"
packages = [{include = "."}]  # <-- This tells Poetry to include everything in the root directory

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
flask = "^2.2.5"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
