[tool.poetry]
name = "careerkraft"
version = "0.1.0"
description = ""
authors = ["prnv007-rgb <pranavmallia2004@gmail.com>"]
readme = "README.md"
packages = [{include = "careerkraft"}]

[tool.poetry.dependencies]
python = ">=3.12"
flask = "^2.3.3"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
